manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-add-tasks-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-add-tasks-api
  template:
    metadata:
      labels:
        app: todo-add-tasks-api
    spec:
      containers:
      - name: todo-add-tasks-api
        image: myacr0011.azurecr.io/add-task-todo-backend:v1
        ports:
        - containerPort: 8000
